Actualizacion de runner

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 
-spring.datasource.url=jdbc:mysql://localhost:3306/committeerecu?autoReconnect=true&useSSL=false&createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost:3306/sigev?autoReconnect=true&useSSL=false&createDatabaseIfNotExist=true
 spring.datasource.username=root
 #spring.datasource.password=root
 #spring.datasource.password=Integradora4832
