--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,8 +7,9 @@ spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
-server.port=8082
+server.port=8081
 spring.jpa.generate-ddl=true
+spring.jpa.show-sql= true
 
 spring.jpa.hibernate.ddl-auto=update
 
